# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  rag_flow_diagram.html  run.bat
.github/workflows/: claude-code-action.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: DIAGNOSTIC_SUMMARY.md  conftest.py  run_diagnostics.py  test_ai_generator.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.bat  format.sh  lint.bat  lint.sh  quality.bat  quality.sh
